--- a/application/modules/relatorio/views/scripts/index/report-4.jrxml
+++ b/application/modules/relatorio/views/scripts/index/report-4.jrxml
@@ -148,12 +148,6 @@ GROUP BY
 		<defaultValueExpression><![CDATA[1]]></defaultValueExpression>
 	</parameter>
 	<parameter name="user_id" class="java.lang.Integer"/>
-	<parameter name="mostrar_fisico" class="java.lang.String">
-		<defaultValueExpression><![CDATA['Sim']]></defaultValueExpression>
-	</parameter>
-	<parameter name="mostrar_financeiro" class="java.lang.Boolean">
-		<defaultValueExpression><![CDATA[false]]></defaultValueExpression>
-	</parameter>
 	<queryString>
 		<![CDATA[WITH 	n1 as ( SELECT  p1.id AS p1_id, p1.singular as p1_singular, p1.has_responsavel as p1_has_responsavel, p1.has_supervisor as p1_has_supervisor, p1.has_equipe as p1_has_equipe, p1.menu as p1_menu, p1.descricao as p1_descricao, p1.ordem as p1_ordem, p1.programacao_id as p1_programacao_id, p1.equipe as p1_equipe, p1.responsavel as p1_responsavel, p1.supervisor as p1_supervisor, p1.instrumento_id as p1_instrumento_id, p1.projeto_id as p1_projeto_id, p1.responsavel_id as p1_responsavel_id, p1.supervisor_id as p1_supervisor_id
                             FROM  vw_report_base p1 WHERE p1.programacao_id is null and p1.instrumento_id=2  ), n2 as (
@@ -244,7 +238,7 @@ GROUP BY
 			<band height="747">
 				<property name="local_mesure_unitheight" value="pixel"/>
 				<property name="com.jaspersoft.studio.unit.height" value="px"/>
-				<printWhenExpression><![CDATA[true==true]]></printWhenExpression>
+				<printWhenExpression><![CDATA[$P{report_type}.intValue()>1]]></printWhenExpression>
 				<frame>
 					<reportElement x="360" y="540" width="192" height="104" uuid="f8c78faf-792d-401b-8999-7b8a399c1125"/>
 					<staticText>
@@ -307,108 +301,6 @@ GROUP BY
 							<text><![CDATA[Encerrada fora do prazo]]></text>
 						</staticText>
 					</frame>
-				</frame>
-			</band>
-		</groupHeader>
-	</group>
-	<group name="p1_nivel">
-		<groupExpression><![CDATA[$F{p1_id}]]></groupExpression>
-		<groupHeader>
-			<band height="48">
-				<printWhenExpression><![CDATA[$F{p1_id}!=null]]></printWhenExpression>
-				<frame>
-					<reportElement key="frame_grupo" style="grupo" mode="Opaque" x="0" y="0" width="555" height="46" backcolor="#F0F0F0" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="1" y="0" width="551" height="15" uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06"/>
-						<textElement>
-							<font size="10" isBold="true" isUnderline="false"/>
-						</textElement>
-						<textFieldExpression><![CDATA["Marcroxpto - " + $F{p1_menu}]]></textFieldExpression>
-					</textField>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="0" y="30" width="550" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
-						<textElement markup="html">
-							<font size="8" isBold="false"/>
-						</textElement>
-						<textFieldExpression><![CDATA["<style>" 
-+"@import url('https://fonts.googleapis.com/css?family=PT+Sans');"
-+"</style>"
-+"<style>span{baddig:0} body{font-size: 12pt !important; font-family: PT Sans, Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
-+ $F{p1_descricao} != null ? "Descrição: " + $F{p1_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
- + "</font></div>"]]></textFieldExpression>
-					</textField>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="373" y="17" width="166" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_equipe} != null ? "Equipe: " + $F{p1_equipe} : ""]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement style="Detail" positionType="Float" x="0" y="17" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_responsavel} != null ? "Responsável: " + $F{p1_responsavel} : ""]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement style="Detail" positionType="Float" x="188" y="17" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_supervisor} != null ? "Supervisor: " + $F{p1_supervisor} : ""]]></textFieldExpression>
-					</textField>
-				</frame>
-			</band>
-		</groupHeader>
-	</group>
-	<group name="p2_nivel">
-		<groupExpression><![CDATA[$F{p2_id}]]></groupExpression>
-		<groupHeader>
-			<band height="48">
-				<printWhenExpression><![CDATA[$F{p2_id}!=null]]></printWhenExpression>
-				<frame>
-					<reportElement key="frame_grupo" style="grupo" mode="Opaque" x="0" y="0" width="555" height="46" backcolor="#F0F0F0" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="1" y="0" width="551" height="15" uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06"/>
-						<textElement>
-							<font size="10" isBold="true" isUnderline="false"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_singular} + " - " + $F{p2_menu}]]></textFieldExpression>
-					</textField>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="0" y="30" width="550" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
-						<textElement markup="html">
-							<font size="8" isBold="false"/>
-						</textElement>
-						<textFieldExpression><![CDATA["<style>" 
-+"@import url('https://fonts.googleapis.com/css?family=PT+Sans');"
-+"</style>"
-+"<style>span{baddig:0} body{font-size: 12pt !important; font-family: PT Sans, Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
-+ $F{p2_descricao} != null ? "Descrição: " + $F{p2_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
- + "</font></div>"]]></textFieldExpression>
-					</textField>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="373" y="17" width="166" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_equipe} != null ? "Equipe: " + $F{p2_equipe} : ""]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement style="Detail" positionType="Float" x="0" y="17" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_responsavel} != null ? "Responsável: " + $F{p2_responsavel} : ""]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement style="Detail" positionType="Float" x="188" y="17" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_supervisor} != null ? "Supervisor: " + $F{p2_supervisor} : ""]]></textFieldExpression>
-					</textField>
 				</frame>
 			</band>
 		</groupHeader>
@@ -610,7 +502,7 @@ GROUP BY
 				</textField>
 				<staticText>
 					<reportElement style="Detail" positionType="Float" x="0" y="46" width="555" height="15" uuid="37953b06-7767-42cd-ae57-a3ad26b28da2">
-						<printWhenExpression><![CDATA[true==true]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$P{report_type}.intValue() >1]]></printWhenExpression>
 					</reportElement>
 					<textElement textAlignment="Center" verticalAlignment="Middle">
 						<font isBold="true"/>
@@ -620,7 +512,7 @@ GROUP BY
 				<componentElement>
 					<reportElement style="Detail" positionType="Float" x="0" y="63" width="555" height="42" uuid="d50ad6cc-f43e-47ec-a3f2-6d9e56fecdab">
 						<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
-						<printWhenExpression><![CDATA[true==true]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$P{report_type}.intValue()>(int)1]]></printWhenExpression>
 					</reportElement>
 					<jr:list xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" printOrder="Vertical">
 						<datasetRun subDataset="operativosDS" uuid="cf87f43e-7bc9-4180-8063-d58f56f2673d">
@@ -741,7 +633,7 @@ GROUP BY
 				</componentElement>
 				<frame>
 					<reportElement style="Detail" positionType="Float" x="0" y="106" width="555" height="37" uuid="2f940162-8f41-4931-918f-72fd7acc0875">
-						<printWhenExpression><![CDATA[$P{mostrar_financeiro}]]></printWhenExpression>
+						<printWhenExpression><![CDATA[$P{report_type}.intValue()>2]]></printWhenExpression>
 					</reportElement>
 					<componentElement>
 						<reportElement positionType="Float" stretchType="ElementGroupBottom" x="0" y="26" width="555" height="11" uuid="b1244040-bf7f-4ba3-98f6-7ab513056695">
@@ -909,10 +801,6 @@ GROUP BY
 						</staticText>
 					</frame>
 				</frame>
-				<textField>
-					<reportElement mode="Opaque" x="59" y="41" width="100" height="30" backcolor="#B7F7CF" uuid="6edf9632-8263-4a00-a9b8-07ba0ae48045"/>
-					<textFieldExpression><![CDATA[$P{mostrar_fisico}]]></textFieldExpression>
-				</textField>
 			</frame>
 			<line>
 				<reportElement x="0" y="0" width="555" height="1" uuid="79b568b1-1cd1-477d-9b56-839de809f013"/>
