--- a/application/modules/relatorio/views/scripts/index/report-1.jrxml
+++ b/application/modules/relatorio/views/scripts/index/report-1.jrxml
@@ -105,6 +105,8 @@ ORDER BY
 		<property name="com.jaspersoft.studio.data.sql.tables" value=""/>
 		<property name="com.jaspersoft.studio.data.defaultdataadapter" value="unasus_local"/>
 		<parameter name="programacao_id" class="java.lang.Integer"/>
+		<parameter name="user_type" class="java.lang.Integer"/>
+		<parameter name="user_id" class="java.lang.Integer"/>
 		<queryString language="SQL">
 			<![CDATA[SELECT
      sum(despesas."valor") AS despesas_valor,
@@ -117,6 +119,7 @@ FROM
      LEFT OUTER JOIN "public"."despesas" despesas ON financeiro."id" = despesas."financeiro_id"
 WHERE
      financeiro."programacao_id" = $P{programacao_id}
+     AND ()
 GROUP BY
      financeiro_descricao,
      financeiro_valor,
@@ -169,7 +172,7 @@ GROUP BY
                                 SELECT n4.*, p5.id AS p5_id, p5.singular as p5_singular, p5.has_responsavel as p5_has_responsavel, p5.has_supervisor as p5_has_supervisor, p5.has_equipe as p5_has_equipe, p5.menu as p5_menu, p5.descricao as p5_descricao, p5.ordem as p5_ordem, p5.programacao_id as p5_programacao_id, p5.equipe as p5_equipe, p5.responsavel as p5_responsavel, p5.supervisor as p5_supervisor, p5.instrumento_id as p5_instrumento_id, p5.projeto_id as p5_projeto_id,  p5.responsavel_id as p5_responsavel_id, p5.supervisor_id as p5_supervisor_id
                                 FROM    vw_report_base p5  RIGHT  JOIN n4 on p5.programacao_id=n4.p4_id  
                          ) SELECT * FROM n5 
- WHERE n5.p5_projeto_id=3 order by p1_id,p2_id,p3_id,p4_id,p5_id]]>
+ WHERE n5.p5_projeto_id=1 order by p1_id,p2_id,p3_id,p4_id,p5_id]]>
 	</queryString>
 	<field name="p1_id" class="java.lang.Integer"/>
 	<field name="p1_singular" class="java.lang.String"/>
@@ -311,11 +314,11 @@ GROUP BY
 			</band>
 		</groupHeader>
 	</group>
-	<group name="p1_nivel">
-		<groupExpression><![CDATA[$F{p1_id}]]></groupExpression>
+	<group name="p4_nivel">
+		<groupExpression><![CDATA[$F{p4_id}]]></groupExpression>
 		<groupHeader>
 			<band height="48">
-				<printWhenExpression><![CDATA[$F{p1_id}!=null]]></printWhenExpression>
+				<printWhenExpression><![CDATA[$F{p4_id}!=null]]></printWhenExpression>
 				<frame>
 					<reportElement key="frame_grupo" style="grupo" mode="Opaque" x="0" y="0" width="555" height="46" backcolor="#F0F0F0" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
 					<textField isStretchWithOverflow="true">
@@ -323,7 +326,7 @@ GROUP BY
 						<textElement>
 							<font size="10" isBold="true" isUnderline="false"/>
 						</textElement>
-						<textFieldExpression><![CDATA["Marcroxpto - " + $F{p1_menu}]]></textFieldExpression>
+						<textFieldExpression><![CDATA["acaoxpro - " + $F{p4_menu}]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
 						<reportElement style="Detail" positionType="Float" x="0" y="30" width="550" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
@@ -334,7 +337,7 @@ GROUP BY
 +"@import url('https://fonts.googleapis.com/css?family=PT+Sans');"
 +"</style>"
 +"<style>span{baddig:0} body{font-size: 12pt !important; font-family: PT Sans, Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
-+ $F{p1_descricao} != null ? "Descrição: " + $F{p1_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
++ $F{p4_descricao} != null ? "Descrição: " + $F{p4_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
  + "</font></div>"]]></textFieldExpression>
 					</textField>
 					<textField isStretchWithOverflow="true">
@@ -342,72 +345,21 @@ GROUP BY
 						<textElement>
 							<font size="8"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_equipe} != null ? "Equipe: " + $F{p1_equipe} : ""]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{p4_equipe} != null ? "Equipe: " + $F{p4_equipe} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
 						<reportElement style="Detail" positionType="Float" x="0" y="17" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_responsavel} != null ? "Responsável: " + $F{p1_responsavel} : ""]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{p4_responsavel} != null ? "Responsável: " + $F{p4_responsavel} : ""]]></textFieldExpression>
 					</textField>
 					<textField>
 						<reportElement style="Detail" positionType="Float" x="188" y="17" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
 						<textElement>
 							<font size="8"/>
 						</textElement>
-						<textFieldExpression><![CDATA[$F{p1_supervisor} != null ? "Supervisor: " + $F{p1_supervisor} : ""]]></textFieldExpression>
-					</textField>
-				</frame>
-			</band>
-		</groupHeader>
-	</group>
-	<group name="p2_nivel">
-		<groupExpression><![CDATA[$F{p2_id}]]></groupExpression>
-		<groupHeader>
-			<band height="48">
-				<printWhenExpression><![CDATA[$F{p2_id}!=null]]></printWhenExpression>
-				<frame>
-					<reportElement key="frame_grupo" style="grupo" mode="Opaque" x="0" y="0" width="555" height="46" backcolor="#F0F0F0" uuid="8dd82c75-2c03-4f48-8a79-d9913efb6ea5"/>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="1" y="0" width="551" height="15" uuid="ab7f1c6c-f283-43d2-ae49-e7cb58d2ab06"/>
-						<textElement>
-							<font size="10" isBold="true" isUnderline="false"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_singular} + " - " + $F{p2_menu}]]></textFieldExpression>
-					</textField>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="0" y="30" width="550" height="12" uuid="535cf34a-25f1-44ff-a670-822cee6fbaf7"/>
-						<textElement markup="html">
-							<font size="8" isBold="false"/>
-						</textElement>
-						<textFieldExpression><![CDATA["<style>" 
-+"@import url('https://fonts.googleapis.com/css?family=PT+Sans');"
-+"</style>"
-+"<style>span{baddig:0} body{font-size: 12pt !important; font-family: PT Sans, Arial !important;}</style><div style=\"line-height: 70%;padding:0\"><font size=1>" 
-+ $F{p2_descricao} != null ? "Descrição: " + $F{p2_descricao}.replaceAll("font-size","font-sizex") .replaceAll("helvetica","PT Sans").replaceAll("/ckimages", $P{APPLICATION_PATH} + "/../files_ckeditor"):""
- + "</font></div>"]]></textFieldExpression>
-					</textField>
-					<textField isStretchWithOverflow="true">
-						<reportElement style="Detail" positionType="Float" x="373" y="17" width="166" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_equipe} != null ? "Equipe: " + $F{p2_equipe} : ""]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement style="Detail" positionType="Float" x="0" y="17" width="188" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_responsavel} != null ? "Responsável: " + $F{p2_responsavel} : ""]]></textFieldExpression>
-					</textField>
-					<textField>
-						<reportElement style="Detail" positionType="Float" x="188" y="17" width="185" height="12" uuid="731fd018-e852-453f-829e-5193458d2662"/>
-						<textElement>
-							<font size="8"/>
-						</textElement>
-						<textFieldExpression><![CDATA[$F{p2_supervisor} != null ? "Supervisor: " + $F{p2_supervisor} : ""]]></textFieldExpression>
+						<textFieldExpression><![CDATA[$F{p4_supervisor} != null ? "Supervisor: " + $F{p4_supervisor} : ""]]></textFieldExpression>
 					</textField>
 				</frame>
 			</band>
@@ -748,9 +700,12 @@ GROUP BY
 							<property name="com.jaspersoft.studio.unit.height" value="pixel"/>
 						</reportElement>
 						<jr:list xmlns:jr="http://jasperreports.sourceforge.net/jasperreports/components" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports/components http://jasperreports.sourceforge.net/xsd/components.xsd" printOrder="Vertical">
-							<datasetRun subDataset="financeiroDS" uuid="ec1e5e89-4fe2-46d7-b951-8cc67b97c14e">
+							<datasetRun subDataset="financeiroDS" uuid="b6317b26-0242-4b73-8ebe-2e429c1b2235">
 								<datasetParameter name="programacao_id">
 									<datasetParameterExpression><![CDATA[$F{p5_id}]]></datasetParameterExpression>
+								</datasetParameter>
+								<datasetParameter name="user_id">
+									<datasetParameterExpression><![CDATA[$P{user_id}]]></datasetParameterExpression>
 								</datasetParameter>
 								<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
 							</datasetRun>
@@ -909,10 +864,6 @@ GROUP BY
 						</staticText>
 					</frame>
 				</frame>
-				<textField>
-					<reportElement mode="Opaque" x="16" y="4" width="356" height="30" backcolor="#2CE8AD" uuid="4ec741a7-07bf-43a4-b75e-b1b0719e92ba"/>
-					<textFieldExpression><![CDATA[$P{mostrar_financeiro}]]></textFieldExpression>
-				</textField>
 			</frame>
 			<line>
 				<reportElement x="0" y="0" width="555" height="1" uuid="79b568b1-1cd1-477d-9b56-839de809f013"/>
