--- a/application/modules/relatorio/views/scripts/index/TocPart.jrxml
+++ b/application/modules/relatorio/views/scripts/index/TocPart.jrxml
@@ -2,9 +2,49 @@
 <!-- Created with Jaspersoft Studio version 6.4.0.final using JasperReports Library version 6.3.1  -->
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="TocPart" pageWidth="595" pageHeight="842" columnWidth="555" leftMargin="20" rightMargin="20" topMargin="0" bottomMargin="0" uuid="47d0342f-7687-4167-8741-854ed01cfed5">
 	<property name="com.jaspersoft.studio.data.defaultdataadapter" value="One Empty Record"/>
-	<style name="Sans_Normal" isDefault="true" fontName="DejaVu Sans" fontSize="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
-	<style name="Sans_Bold" fontName="DejaVu Sans" fontSize="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
-	<style name="Sans_Italic" fontName="DejaVu Sans" fontSize="12" isBold="false" isItalic="true" isUnderline="false" isStrikeThrough="false"/>
+	<style name="Sans_Normal" isDefault="true" fontName="PT Sans" fontSize="12" isBold="false" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+	<style name="Sans_Bold" fontName="PT Sans" fontSize="12" isBold="true" isItalic="false" isUnderline="false" isStrikeThrough="false"/>
+	<style name="Sans_Italic" fontName="PT Sans" fontSize="12" isBold="false" isItalic="true" isUnderline="false" isStrikeThrough="false"/>
+	<style name="Title" fontName="PT Sans" fontSize="50" isBold="true"/>
+	<style name="SubTitle" forecolor="#736343" fontName="PT Sans" fontSize="18"/>
+	<style name="Column header" forecolor="#666666" fontName="PT Sans" fontSize="12" isBold="true"/>
+	<style name="Detail" fontName="PT Sans" fontSize="9"/>
+	<style name="padrao" fontName="PT Sans" fontSize="9"/>
+	<style name="Row" mode="Transparent">
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$V{REPORT_COUNT}%2 == 0]]></conditionExpression>
+			<style backcolor="#99FF99"/>
+		</conditionalStyle>
+	</style>
+	<style name="Atencao" mode="Opaque" backcolor="#2ECC71">
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$F{operativos_andamento_id}.intValue() <  new Integer("6") &&
+($F{operativos_data_inicio}.before(new java.util.Date()) &&
+$F{operativos_data_prazo}.after( new java.util.Date() ))
+&&
+(
+	(
+		(new Long((new java.util.Date()).getTime()-$F{operativos_data_inicio}.getTime()) ).doubleValue()/(new Long($F{operativos_data_prazo}.getTime()-$F{operativos_data_inicio}.getTime())).doubleValue()
+	) > new Double(0.8)
+)]]></conditionExpression>
+			<style backcolor="#F1C40F"/>
+		</conditionalStyle>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$F{operativos_andamento_id} < new Integer("6")  &&
+($F{operativos_data_prazo}.before( new java.util.Date() ) )]]></conditionExpression>
+			<style backcolor="#E74C3C"/>
+		</conditionalStyle>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$F{operativos_andamento_id}.equals( new Integer("6") ) 
+&& $F{operativos_data_prazo}.before( $F{operativos_data_encerramento})]]></conditionExpression>
+			<style backcolor="#2980B9"/>
+		</conditionalStyle>
+		<conditionalStyle>
+			<conditionExpression><![CDATA[$F{operativos_andamento_id}.equals( new Integer("6") )]]></conditionExpression>
+			<style backcolor="#3498DB"/>
+		</conditionalStyle>
+	</style>
+	<style name="grupo" mode="Opaque" backcolor="#CCCCCC"/>
 	<parameter name="ReportTitle" class="java.lang.String"/>
 	<field name="level" class="java.lang.Integer"/>
 	<field name="label" class="java.lang.String"/>
@@ -19,15 +59,10 @@
 					<property name="com.jaspersoft.studio.unit.width" value="px"/>
 				</reportElement>
 			</line>
-			<textField isBlankWhenNull="true">
-				<reportElement style="Sans_Normal" x="50" y="13" width="455" height="60" uuid="00a87b84-1ab0-4558-9780-c6bf32fb8889">
-					<property name="local_mesure_unitx" value="pixel"/>
-					<property name="com.jaspersoft.studio.unit.x" value="px"/>
-					<property name="local_mesure_unitwidth" value="pixel"/>
-					<property name="com.jaspersoft.studio.unit.width" value="px"/>
-				</reportElement>
+			<textField isStretchWithOverflow="true" isBlankWhenNull="true">
+				<reportElement x="0" y="38" width="555" height="42" uuid="ceea1f45-b817-420c-9375-959cbad4633d"/>
 				<textElement textAlignment="Center" verticalAlignment="Bottom">
-					<font size="22"/>
+					<font size="14" isBold="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$P{ReportTitle}]]></textFieldExpression>
 			</textField>
@@ -36,7 +71,7 @@
 	<pageHeader>
 		<band height="40" splitType="Stretch">
 			<staticText>
-				<reportElement style="Sans_Normal" positionType="Float" x="50" y="10" width="455" height="20" isRemoveLineWhenBlank="true" uuid="2d14bb6a-c6a1-448e-83df-d3ea629a9d32">
+				<reportElement positionType="Float" x="50" y="10" width="455" height="20" isRemoveLineWhenBlank="true" uuid="2d14bb6a-c6a1-448e-83df-d3ea629a9d32">
 					<property name="local_mesure_unitx" value="pixel"/>
 					<property name="com.jaspersoft.studio.unit.x" value="px"/>
 					<property name="local_mesure_unitwidth" value="pixel"/>
